--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     <h1>
       <strong>
-        <i>Where it the tex displayed</i>
+        <i>Where it the text displayed</i>
         </strong>
 <!--i tag gives out the italic style to the structure and the strong tag shows threr is strong meaning behind words and also gives bold style to the text between it.-->
       </h1>
@@ -132,5 +132,9 @@
   <textarea name="" id="" cols="30" rows="10"></textarea>
   <input type="submit" value="Submit">
 </form>
+<br> <hr size="4" noshade color="blue">
+<a href="Lecture 15.html"><strong>The other part where there is plenty of explanation up to second third module</strong></a>
+<br> <hr size="4" noshade color="blue">
+<a href="Making forms.html"><strong>The other part where there is plenty of explanation up to second third module</strong></a>
  </body>
 </html>
