--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
   <input type="submit" value="Submit">
 </form>
 <br> <hr size="4" noshade color="blue">
-<a href="Lecture 15.html"><strong>The other part where there is plenty of explanation up to second third module</strong></a>
-<br> <hr size="4" noshade color="blue">
-<a href="Making forms.html"><strong>The other part where there is plenty of explanation up to second third module</strong></a>
+<a href="Lecture 15.html">The other part where there is plenty of explanation up to second third module</a>
+<br> <hr size="4" noshade color="blue"><b>
+<a href="Making forms.html">The other part where there is plenty of explanation up to second third module</a></b>
  </body>
 </html>
